# crewaiAgent

./: README.md  pyproject.toml
knowledge/: script_template.docx  video_creation_template.md  ~$ript_template.docx
output/: report.md
src/crew_project/: crew.py  main.py
src/crew_project/config/: agents.yaml  tasks.yaml
src/crew_project/tools/: notion_tool.py
src/crew_project/utils/: md2notion.py
